# duckdb-primeirouso

./: .gitignore  404.html  README.md  gerador.py  gerar.py  index.html  mkdocs.yml  pyproject.toml
docs/: index.md  teste.md
duckdb/: teste01-duck-csv.py  teste02-duck-parquet.py
pandas/: teste01-pd.py  teste02-csv.py  teste02-pd-csv.py  teste02.py  teste03-pd-parquet.py
search/: search_index.json
sql/: teste01.sql  teste02.sql
teste/: index.html
