[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.4"
faker = "^22.2.0"
duckdb = "^0.10.0"
pyarrow = "^15.0.0"
fastparquet = "^2024.2.0"


[tool.poetry.group.dev.dependencies]
mkdocs = "^1.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
