[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.1"
pandas = "^2.1.4"
faker = "^22.2.0"
duckdb = "^0.10.0"
pyarrow = "^15.0.0"
fastparquet = "^2024.2.0"
tqdm = "^4.66.2"
taskipy = "^1.12.2"
polars = "^0.20.10"
black = "^24.2.0"
isort = "^5.13.2"


[tool.poetry.group.dev.dependencies]
mkdocs = "^1.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
duck = "python ./duckdb/teste01-duck-csv.py && python ./duckdb/teste02-duck-parquet.py"
gerar = "python gerar.py"
pandas = "python ./pandas/teste02-pd-csv.py && python ./pandas/teste03-pd-parquet.py"
docs = "poetry run mkdocs serve"